# ai-agents-for-developers-examples

./: .gitignore  README.md
app-admin-mcp/: README.md  pyproject.toml
app-admin-mcp/src/app_admin/: server.py
create_lint_rule/: README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
create_lint_rule/example_js/: test.js
create_lint_rule/src/create_lint_rule/: main.py  mcp_server.py
docs_updater/: README.md  pyproject.toml
docs_updater/example-app/: package-lock.json  package.json
docs_updater/example-app/docs/: index.md  user-docs.md
docs_updater/example-app/docs/.vitepress/: config.ts
docs_updater/example-app/src/: App.tsx
docs_updater/src/docs_updater/: crew.py  main.py
docs_updater/src/docs_updater/tools/: take_screenshot_tool.py
