[project]
name = "create_lint_rule"
version = "0.1.0"
description = "create_lint_rule using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "fastmcp>=2.3.3",
]

[project.scripts]
kickoff = "create_lint_rule.main:kickoff"
plot = "create_lint_rule.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/create_lint_rule"]