[project]
name = "docs_updater"
version = "0.1.0"
description = "docs-updater using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "playwright>=1.52.0",
]

[project.scripts]
docs_updater = "docs_updater.main:run"
run_crew = "docs_updater.main:run"
train = "docs_updater.main:train"
replay = "docs_updater.main:replay"
test = "docs_updater.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
